--- a/components/examples/examples.less
+++ b/components/examples/examples.less
@@ -1,9 +1,10 @@
+@import (reference) 'emphasis/emphasis.less';
 @import (reference) 'example/example.less';
 @import (reference) 'fonts/fonts.less';
 
 // Examples
 //
-// A set of one or more linguistic examples. By convention, examples in linguistics publications are numbered (1), (2), (3), etc. To number the examples, wrap them in an `<ol class=examples>` tag, and place each example in a `<li class=ex>` element. All content within an example displays in a serif Unicode font by default; you may need to override the font family for individual elements.
+// A set of one or more linguistic examples. By convention, examples in linguistics publications are numbered (1), (2), (3), etc. To number the examples, wrap them in an `<ol class=examples>` tag, and place each example in a `<li class=ex>` element. All content within an example displays in a serif Unicode font by default; you may need to override the font family for individual elements. `<b>` and `<em>` tags within examples are styled with the `.em` class by default (see the [example emphasis](#kssref-components-emphasis) component).
 //
 // Markup: examples.html
 //
@@ -31,10 +32,13 @@
   margin:          0em;
   padding:         0em;
 
+  b, em, .em {
+    .em;
+  }
+
   .ex {
 
     .ex;
-
     counter-increment:   examples;
     margin-block-end:    1em;
     margin-inline-start: var(--example-indent);
