--- a/components/inline/inline.less
+++ b/components/inline/inline.less
@@ -1,14 +1,21 @@
+@import (reference) 'emphasis/emphasis.less';
 @import (reference) 'components/transcription/transcription.less';
 
 // Inline Example
 //
-// Inline examples within prose are displayed in italics, as is the convention in linguistics. Best practice is to wrap inline examples in the `<i class=inex lang={ISO code}>` tag, and ensure that you include the correct ISO 639-3 code in the `lang` attribute. Since inline examples are a kind of transcription, they display in a Unicode font by default.
+// Inline examples within prose are displayed in italics, as is the convention in linguistics. Best practice is to wrap inline examples in the `<i class=inex lang={ISO code}>` tag, and ensure that you include the correct ISO 639-3 code in the `lang` attribute. Since inline examples are a kind of transcription, they display in a Unicode font by default. `<b>` and `<em>` tags within inline examples are styled with the `.em` class by default (see the [example emphasis](#kssref-components-emphasis) component).
 //
 // Markup: inline.html
 //
 // Styleguide components.inline
 .inex,
 .inline {
+
   .txn;
   font-style: italic;
+
+  b, em, .em {
+    .em;
+  }
+
 }
