--- a/components/example/example.less
+++ b/components/example/example.less
@@ -8,13 +8,13 @@
 // Markup: example.html
 //
 // Styleguide components.example
-.ex {
+.ex, .example {
 
   display:     flow-root;
   font-family: var(--font-unicode-serif);
   line-height: 1.5;
 
-  b, em, .em {
+  b, em, .em, .emphasis {
     .em;
   }
 
