--- a/components/examples/examples.less
+++ b/components/examples/examples.less
@@ -9,7 +9,7 @@
 // Markup: examples.html
 //
 // Styleguide components.examples
-.examples {
+.exs, .examples {
 
   // --example-indent
   //
@@ -32,11 +32,11 @@
   margin:          0em;
   padding:         0em;
 
-  b, em, .em {
+  b, em, .em, .emphasis {
     .em;
   }
 
-  .ex {
+  .ex, .example {
 
     .ex;
     counter-increment:   examples;
@@ -52,7 +52,7 @@
 
   }
 
-  .subexamples {
+  .subexs, .subexamples {
 
     margin-inline-start: 1.25em;
     padding:             0em;
