--- a/components/interlinear/interlinear.less
+++ b/components/interlinear/interlinear.less
@@ -198,7 +198,7 @@
   // Emphasis is indicated using either `<em>` or `<b>` tags (both are semantically valid for this use case), or the `.em` class. See the [example emphasis](#kssref-components-emphasis) component.
   //
   // Styleguide components.interlinear.emphasis
-  b, em, .em {
+  b, em, .em, .emphasis {
     .em;
   }
 
