--- a/components/components.less
+++ b/components/components.less
@@ -6,6 +6,9 @@
 //
 // Styleguide components
 
+@import 'abbreviation/abbreviation.less';
+@import 'cite/cite.less';
+@import 'emphasis/emphasis.less';
 @import 'example/example.less';
 @import 'examples/examples.less';
 @import 'gloss/gloss.less';
