--- a/components/abbreviation/abbreviation.less
+++ b/components/abbreviation/abbreviation.less
@@ -6,6 +6,7 @@
 //
 // Styleguide components.abbreviation
 .abbr, .abbreviation {
-  cursor:          help;
-  text-decoration: dotted underline;
+  cursor:                  help;
+  text-decoration:         dotted underline;
+  text-underline-position: under;
 }
