--- a/components/components.less
+++ b/components/components.less
@@ -8,6 +8,7 @@
 
 @import 'abbreviation/abbreviation.less';
 @import 'cite/cite.less';
+@import 'definition/definition.less';
 @import 'emphasis/emphasis.less';
 @import 'example/example.less';
 @import 'examples/examples.less';
