--- a/components/cite/cite.less
+++ b/components/cite/cite.less
@@ -2,7 +2,7 @@
 //
 // The `.cite` class is used for titles of publications, etc. Best practice is to use a `<cite>` tag as well.
 //
-// Markup: cite.hbs
+// Markup: cite.html
 //
 // Styleguide components.cite
 .cite {
