--- a/components/components.less
+++ b/components/components.less
@@ -9,11 +9,12 @@
 @import 'abbreviation/abbreviation.less';
 @import 'cite/cite.less';
 @import 'definition/definition.less';
+@import 'document/document.less';
 @import 'emphasis/emphasis.less';
 @import 'example/example.less';
 @import 'examples/examples.less';
 @import 'gloss/gloss.less';
-@import 'inline/inline.less';
+@import 'inline-example/inline-example.less';
 @import 'interlinear/interlinear.less';
 @import 'transcription/transcription.less';
 @import 'translation/translation.less';
