--- a/components/components.less
+++ b/components/components.less
@@ -16,5 +16,6 @@
 @import 'gloss/gloss.less';
 @import 'inline-example/inline-example.less';
 @import 'interlinear/interlinear.less';
+@import 'orthographic/orthographic.less';
 @import 'transcription/transcription.less';
 @import 'translation/translation.less';
