--- a/components/document/document.less
+++ b/components/document/document.less
@@ -6,6 +6,7 @@
 @import (reference) 'gloss/gloss.less';
 @import (reference) 'inline-example/inline-example.less';
 @import (reference) 'interlinear/interlinear.less';
+@import (reference) 'orthographic/orthographic.less';
 @import (reference) 'transcription/transcription.less';
 
 // Document
@@ -30,6 +31,7 @@
   .gl, .gloss                { .gl; }
   .inex, .inline-ex          { .inex; }
   .igl, .interlinear         { .igl; }
+  .ortho, .orthographic      { .ortho; }
   i, .txn, .transcription    { .txn; }
   q, .tln, .translation      { .tln; }
 
