--- a/components/transcription/transcription.less
+++ b/components/transcription/transcription.less
@@ -11,6 +11,13 @@
 .txn,
 .transcription {
 
+  // --txn-padding
+  //
+  // The amount of padding to use between transcriptions and the surrounding brackets (`//`, `[]`, and `⟨⟩`).
+  //
+  // Styleguide components.transcription.--txn-padding
+  --txn-padding: 0.15em;
+
   font-family: var(--font-unicode-serif);
 
   b, em, .em, .emphasis {
