--- a/components/document/document.less
+++ b/components/document/document.less
@@ -7,6 +7,7 @@
 @import (reference) 'inline-example/inline-example.less';
 @import (reference) 'interlinear/interlinear.less';
 @import (reference) 'orthographic/orthographic.less';
+@import (reference) 'phonemic/phonemic.less';
 @import (reference) 'transcription/transcription.less';
 
 // Document
@@ -32,6 +33,7 @@
   .inex, .inline-ex          { .inex; }
   .igl, .interlinear         { .igl; }
   .ortho, .orthographic      { .ortho; }
+  .phon, .phonemic           { .phon; }
   i, .txn, .transcription    { .txn; }
   q, .tln, .translation      { .tln; }
 
