--- a/components/components.less
+++ b/components/components.less
@@ -17,5 +17,6 @@
 @import 'inline-example/inline-example.less';
 @import 'interlinear/interlinear.less';
 @import 'orthographic/orthographic.less';
+@import 'phonemic/phonemic.less';
 @import 'transcription/transcription.less';
 @import 'translation/translation.less';
