--- a/components/components.less
+++ b/components/components.less
@@ -18,5 +18,6 @@
 @import 'interlinear/interlinear.less';
 @import 'orthographic/orthographic.less';
 @import 'phonemic/phonemic.less';
+@import 'phonetic/phonetic.less';
 @import 'transcription/transcription.less';
 @import 'translation/translation.less';
