--- a/components/document/document.less
+++ b/components/document/document.less
@@ -8,6 +8,7 @@
 @import (reference) 'interlinear/interlinear.less';
 @import (reference) 'orthographic/orthographic.less';
 @import (reference) 'phonemic/phonemic.less';
+@import (reference) 'phonetic/phonetic.less';
 @import (reference) 'transcription/transcription.less';
 
 // Document
@@ -29,6 +30,7 @@
   .ex-header                 { .ex-header; }
   .ex-source                 { .ex-source; }
   .exs, .examples            { .examples; }
+  .fon, .phonetic            { .fon; }
   .gl, .gloss                { .gl; }
   .inex, .inline-ex          { .inex; }
   .igl, .interlinear         { .igl; }
