build CSS files

--- a/components/document/document.less
+++ b/components/document/document.less
@@ -2,6 +2,7 @@
 @import (reference) 'cite/cite.less';
 @import (reference) 'definition/definition.less';
 @import (reference) 'example/example.less';
+@import (reference) 'examples/examples.less';
 @import (reference) 'fonts/fonts.less';
 @import (reference) 'gloss/gloss.less';
 @import (reference) 'inline-example/inline-example.less';
