--- a/components/abbreviation/abbreviation.css
+++ b/components/abbreviation/abbreviation.css
@@ -1,6 +1,1 @@
-.abbr,
-.abbreviation {
-  cursor: help;
-  text-decoration: dotted underline;
-  text-underline-position: under;
-}
+.abbr,.abbreviation{cursor:help;text-decoration:dotted underline;text-underline-position:under}
