--- a/components/orthographic/orthographic.css
+++ b/components/orthographic/orthographic.css
@@ -1,37 +1,1 @@
-.ortho,
-.orthographic {
-  --txn-padding: 0.15em;
-  font-family: var(--font-unicode-serif);
-}
-.ortho b,
-.orthographic b,
-.ortho em,
-.orthographic em,
-.ortho .em,
-.orthographic .em,
-.ortho .emphasis,
-.orthographic .emphasis {
-  color: var(--em-color);
-  font-weight: bold;
-}
-.ortho b,
-.orthographic b,
-.ortho em,
-.orthographic em,
-.ortho .em,
-.orthographic .em,
-.ortho .emphasis,
-.orthographic .emphasis {
-  color: var(--em-color);
-  font-weight: bold;
-}
-.ortho::before,
-.orthographic::before {
-  content: '⟨';
-  padding-right: var(--txn-padding);
-}
-.ortho::after,
-.orthographic::after {
-  content: '⟩';
-  padding-left: var(--txn-padding);
-}
+.ortho,.orthographic{--txn-padding:0.15em;font-family:var(--font-unicode-serif)}.ortho .em,.ortho .emphasis,.ortho b,.ortho em,.orthographic .em,.orthographic .emphasis,.orthographic b,.orthographic em{color:var(--em-color);font-weight:700}.ortho .em,.ortho .emphasis,.ortho b,.ortho em,.orthographic .em,.orthographic .emphasis,.orthographic b,.orthographic em{color:var(--em-color);font-weight:700}.ortho::before,.orthographic::before{content:'⟨';padding-right:var(--txn-padding)}.ortho::after,.orthographic::after{content:'⟩';padding-left:var(--txn-padding)}
