--- a/components/phonemic/phonemic.css
+++ b/components/phonemic/phonemic.css
@@ -1,26 +1,1 @@
-.phon,
-.phonemic {
-  --txn-padding: 0.15em;
-  font-family: var(--font-unicode-serif);
-}
-.phon b,
-.phonemic b,
-.phon em,
-.phonemic em,
-.phon .em,
-.phonemic .em,
-.phon .emphasis,
-.phonemic .emphasis {
-  color: var(--em-color);
-  font-weight: bold;
-}
-.phon::before,
-.phonemic::before {
-  content: '/';
-  padding-right: var(--txn-padding);
-}
-.phon::after,
-.phonemic::after {
-  content: '/';
-  padding-left: var(--txn-padding);
-}
+.phon,.phonemic{--txn-padding:0.15em;font-family:var(--font-unicode-serif)}.phon .em,.phon .emphasis,.phon b,.phon em,.phonemic .em,.phonemic .emphasis,.phonemic b,.phonemic em{color:var(--em-color);font-weight:700}.phon::before,.phonemic::before{content:'/';padding-right:var(--txn-padding)}.phon::after,.phonemic::after{content:'/';padding-left:var(--txn-padding)}
