--- a/components/translation/translation.css
+++ b/components/translation/translation.css
@@ -1,12 +1,1 @@
-.tln,
-.translation {
-  quotes: '‘' '’' '“' '”';
-}
-.tln::before,
-.translation::before {
-  content: open-quote;
-}
-.tln::after,
-.translation::after {
-  content: close-quote;
-}
+.tln,.translation{quotes:'‘' '’' '“' '”'}.tln::before,.translation::before{content:open-quote}.tln::after,.translation::after{content:close-quote}
