--- a/fonts/typography.css
+++ b/fonts/typography.css
@@ -1,46 +1,1 @@
-@font-face {
-  font-family: 'Linux Libertine';
-  src: local('Linux Libertine'), local('LinLibertine_R'), url(/fonts/LinLibertine.woff2) format('woff2');
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Linux Libertine';
-  src: local('Linux Libertine Bold'), local('LinLibertine_RB'), url(/fonts/LinLibertineB.woff2) format('woff2');
-  font-weight: bold;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Linux Libertine';
-  src: local('Linux Libertine Bold Italic'), local('LinLibertine_RBI'), url(/fonts/LinLibertineBI.woff2) format('woff2');
-  font-weight: bold;
-  font-style: italic;
-}
-@font-face {
-  font-family: 'Linux Libertine Display';
-  src: local('Linux Libertine Display'), local('LinLibertine_DR'), url(/fonts/LinLibertineDisplay.woff2) format('woff2');
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Linux Libertine';
-  src: local('Linux Libertine Italic'), local('LinLibertine_RI'), url(/fonts/LinLibertineI.woff2) format('woff2');
-  font-weight: normal;
-  font-style: italic;
-}
-@font-face {
-  font-family: 'Linux Libertine';
-  src: local('Linux Libertine Semibold'), local('LinLibertine_RZ'), url(/fonts/LinLibertineZ.woff2) format('woff2');
-  font-weight: 600;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Linux Libertine';
-  src: local('Linux Libertine Semibold Italic'), local('LinLibertine_RZI'), url(/fonts/LinLibertineZI.woff2) format('woff2');
-  font-weight: 600;
-  font-style: italic;
-}
-:root {
-  --font-unicode-sans: 'Noto Sans', 'Source Sans Pro', 'Andika', 'Lucida Sans Unicode', sans-serif;
-  --font-unicode-serif: 'Linux Libertine', 'Charis SIL', 'Gentium Plus', 'Doulos SIL', 'Source Serif Pro', 'Noto Serif', 'Times New Roman', serif;
-}
+@font-face{font-family:'Linux Libertine';src:local('Linux Libertine'),local('LinLibertine_R'),url(/fonts/LinLibertine.woff2) format('woff2');font-weight:400;font-style:normal}@font-face{font-family:'Linux Libertine';src:local('Linux Libertine Bold'),local('LinLibertine_RB'),url(/fonts/LinLibertineB.woff2) format('woff2');font-weight:700;font-style:normal}@font-face{font-family:'Linux Libertine';src:local('Linux Libertine Bold Italic'),local('LinLibertine_RBI'),url(/fonts/LinLibertineBI.woff2) format('woff2');font-weight:700;font-style:italic}@font-face{font-family:'Linux Libertine Display';src:local('Linux Libertine Display'),local('LinLibertine_DR'),url(/fonts/LinLibertineDisplay.woff2) format('woff2');font-weight:400;font-style:normal}@font-face{font-family:'Linux Libertine';src:local('Linux Libertine Italic'),local('LinLibertine_RI'),url(/fonts/LinLibertineI.woff2) format('woff2');font-weight:400;font-style:italic}@font-face{font-family:'Linux Libertine';src:local('Linux Libertine Semibold'),local('LinLibertine_RZ'),url(/fonts/LinLibertineZ.woff2) format('woff2');font-weight:600;font-style:normal}@font-face{font-family:'Linux Libertine';src:local('Linux Libertine Semibold Italic'),local('LinLibertine_RZI'),url(/fonts/LinLibertineZI.woff2) format('woff2');font-weight:600;font-style:italic}:root{--font-unicode-sans:'Noto Sans','Source Sans Pro','Andika','Lucida Sans Unicode',sans-serif;--font-unicode-serif:'Linux Libertine','Charis SIL','Gentium Plus','Doulos SIL','Source Serif Pro','Noto Serif','Times New Roman',serif}
