--- a/components/example/example.css
+++ b/components/example/example.css
@@ -1,35 +1,1 @@
-.ex,
-.example {
-  display: flow-root;
-  font-family: var(--font-unicode-serif);
-  line-height: 1.5;
-}
-.ex b,
-.example b,
-.ex em,
-.example em,
-.ex .em,
-.example .em,
-.ex .emphasis,
-.example .emphasis {
-  color: var(--em-color);
-  font-weight: bold;
-}
-.ex-header {
-  margin: 0em;
-  padding: 0em;
-  text-decoration: underline;
-  text-underline-position: under;
-}
-.ex-source {
-  float: right;
-  float: inline-end;
-  margin: 0em;
-  padding: 0em;
-}
-.ex-source::before {
-  content: '(';
-}
-.ex-source::after {
-  content: ')';
-}
+.ex,.example{display:flow-root;font-family:var(--font-unicode-serif);line-height:1.5}.ex .em,.ex .emphasis,.ex b,.ex em,.example .em,.example .emphasis,.example b,.example em{color:var(--em-color);font-weight:700}.ex-header{margin:0;padding:0;text-decoration:underline;text-underline-position:under}.ex-source{float:right;float:inline-end;margin:0;padding:0}.ex-source::before{content:'('}.ex-source::after{content:')'}
