--- a/components/inline-example/inline-example.css
+++ b/components/inline-example/inline-example.css
@@ -1,28 +1,1 @@
-.inex,
-.inline-ex {
-  --txn-padding: 0.15em;
-  font-family: var(--font-unicode-serif);
-  font-style: italic;
-}
-.inex b,
-.inline-ex b,
-.inex em,
-.inline-ex em,
-.inex .em,
-.inline-ex .em,
-.inex .emphasis,
-.inline-ex .emphasis {
-  color: var(--em-color);
-  font-weight: bold;
-}
-.inex b,
-.inline-ex b,
-.inex em,
-.inline-ex em,
-.inex .em,
-.inline-ex .em,
-.inex .emphasis,
-.inline-ex .emphasis {
-  color: var(--em-color);
-  font-weight: bold;
-}
+.inex,.inline-ex{--txn-padding:0.15em;font-family:var(--font-unicode-serif);font-style:italic}.inex .em,.inex .emphasis,.inex b,.inex em,.inline-ex .em,.inline-ex .emphasis,.inline-ex b,.inline-ex em{color:var(--em-color);font-weight:700}.inex .em,.inex .emphasis,.inex b,.inex em,.inline-ex .em,.inline-ex .emphasis,.inline-ex b,.inline-ex em{color:var(--em-color);font-weight:700}
