--- a/components/phonetic/phonetic.css
+++ b/components/phonetic/phonetic.css
@@ -1,26 +1,1 @@
-.fon,
-.phonetic {
-  --txn-padding: 0.15em;
-  font-family: var(--font-unicode-serif);
-}
-.fon b,
-.phonetic b,
-.fon em,
-.phonetic em,
-.fon .em,
-.phonetic .em,
-.fon .emphasis,
-.phonetic .emphasis {
-  color: var(--em-color);
-  font-weight: bold;
-}
-.fon::before,
-.phonetic::before {
-  content: '[';
-  padding-right: var(--txn-padding);
-}
-.fon::after,
-.phonetic::after {
-  content: ']';
-  padding-left: var(--txn-padding);
-}
+.fon,.phonetic{--txn-padding:0.15em;font-family:var(--font-unicode-serif)}.fon .em,.fon .emphasis,.fon b,.fon em,.phonetic .em,.phonetic .emphasis,.phonetic b,.phonetic em{color:var(--em-color);font-weight:700}.fon::before,.phonetic::before{content:'[';padding-right:var(--txn-padding)}.fon::after,.phonetic::after{content:']';padding-left:var(--txn-padding)}
