--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,4 +1,1 @@
-:root {
-  --font-unicode-sans: 'Noto Sans', 'Source Sans Pro', 'Andika', 'Lucida Sans Unicode', sans-serif;
-  --font-unicode-serif: 'Linux Libertine', 'Charis SIL', 'Gentium Plus', 'Doulos SIL', 'Source Serif Pro', 'Noto Serif', 'Times New Roman', serif;
-}
+:root{--font-unicode-sans:'Noto Sans','Source Sans Pro','Andika','Lucida Sans Unicode',sans-serif;--font-unicode-serif:'Linux Libertine','Charis SIL','Gentium Plus','Doulos SIL','Source Serif Pro','Noto Serif','Times New Roman',serif}
