include fonts in /docs

--- a/components/example/example.less
+++ b/components/example/example.less
@@ -1,5 +1,5 @@
+@import 'typography/fonts.less';
 @import (reference) 'emphasis/emphasis.less';
-@import (reference) 'fonts/fonts.less';
 
 // Example
 //
