--- a/components/examples/examples.less
+++ b/components/examples/examples.less
@@ -1,6 +1,6 @@
+@import 'typography/fonts.less';
 @import (reference) 'emphasis/emphasis.less';
 @import (reference) 'example/example.less';
-@import (reference) 'fonts/fonts.less';
 
 // Examples
 //
