--- a/components/interlinear/interlinear.less
+++ b/components/interlinear/interlinear.less
@@ -1,4 +1,4 @@
-@import 'fonts/fonts.less';
+@import 'typography/fonts.less';
 @import (reference) 'emphasis/emphasis.less';
 @import (reference) 'example/example.less';
 @import (reference) 'gloss/gloss.less';
