--- a/components/transcription/transcription.less
+++ b/components/transcription/transcription.less
@@ -1,5 +1,5 @@
-@import 'emphasis/emphasis.less';
-@import 'fonts/fonts.less';
+@import 'typography/fonts.less';
+@import (reference) 'emphasis/emphasis.less';
 
 // Transcription
 //
