--- a/dlx.less
+++ b/dlx.less
@@ -3,4 +3,4 @@ This file bundles all the DLx styles into a single file.
  */
 
 @import 'components/components.less';
-@import 'fonts/typography.less';
+@import 'typography/typography.less';
