--- a/typography/LinuxLibertine.less
+++ b/typography/LinuxLibertine.less
@@ -1,6 +1,6 @@
 // Linux Libertine
 //
-// This is the main recommended font for representing linguistic data in Unicode. `.woff2` versions of this font family are located in `/fonts/LinuxLibertine`.
+// This is the main recommended font for representing linguistic data in Unicode. `.woff2` versions of this font family are located in `/typography/LinuxLibertine`.
 //
 // Weight: 2
 //
