--- a/components/document/document.less
+++ b/components/document/document.less
@@ -1,9 +1,9 @@
+@import 'typography/fonts.less';
 @import (reference) 'abbreviation/abbreviation.less';
 @import (reference) 'cite/cite.less';
 @import (reference) 'definition/definition.less';
 @import (reference) 'example/example.less';
 @import (reference) 'examples/examples.less';
-@import (reference) 'fonts/fonts.less';
 @import (reference) 'gloss/gloss.less';
 @import (reference) 'inline-example/inline-example.less';
 @import (reference) 'interlinear/interlinear.less';
