DOCS: minor updates to component descriptions

--- a/components/definition/definition.less
+++ b/components/definition/definition.less
@@ -1,6 +1,6 @@
 // Definition
 //
-// The `.dfn` class is used for definitions. Best practice is to use a `<dfn>` tag as well.
+// The `.dfn` class is used for terms being defined. Best practice is to use a `<dfn>` tag as well.
 //
 // Markup: definition.html
 //
