--- a/components/examples/examples.html
+++ b/components/examples/examples.html
@@ -62,7 +62,7 @@
     <p class=ex-header>Menominee (Algonquian)</p>
     <ol class=subexamples>
       <li><p><i class=txn lang=mez>pāpaehcen</i> <q class=tln>he, she, it (anim.) falls</q> (AI)</p></li>
-      <li><p><i class=txn lang=mez>pāpaehnaen</i> <q clas=translation>it (inan.) falls</q> (II)</p></li>
+      <li><p><i class=txn lang=mez>pāpaehnaen</i> <q class=tln>it (inan.) falls</q> (II)</p></li>
     </ol>
   </li>
 
