--- a/components/example/example.less
+++ b/components/example/example.less
@@ -3,7 +3,7 @@
 
 // Example
 //
-// Linguistic examples may contain any type of linguistic data. Each example should be given the `.ex` class. All content within an example displays in a serif Unicode font by default; you may need to override the font family for individual elements. To add numbering to examples, wrap them in an `<ol class=examples>` tag and place each example inside a `<li class=ex>` tag. See the [examples component](#kssref-components-examples) for more information. `<b>` and `<em>` tags within examples are styled with the `.em` class by default (see the [example emphasis](#kssref-components-emphasis) component).
+// Linguistic examples may contain any type of linguistic data. Each example should be given the `.ex` class. All content within an example displays in a serif Unicode font by default; you may need to override the font family for individual elements (such as the example header). To add numbering to examples, wrap them in an `<ol class=examples>` tag and place each example inside a `<li class=ex>` tag. See the [examples component](#kssref-components-examples) for more information. `<b>` and `<em>` tags within examples are styled with the `.em` class by default (see the [example emphasis](#kssref-components-emphasis) component).
 //
 // Markup: example.html
 //
