--- a/components/transcription/transcription.less
+++ b/components/transcription/transcription.less
@@ -3,7 +3,7 @@
 
 // Transcription
 //
-// Any written representation of speech or sign. Always be sure to include the `lang` attribute on transcriptions. `<b>` and `<em>` tags within transcriptions are styled with the `.em` class by default (see the [example emphasis](#kssref-components-emphasis) component).
+// Any written representation of speech or sign. Always be sure to include the `lang` attribute on transcriptions. `<b>` and `<em>` tags within transcriptions are styled with the `.em` class by default (see the [example emphasis](#kssref-components-emphasis) component). Whenever possible, prefer a more specific type of transcription: `.ortho`, `.phon`, or `.fon`.
 //
 // Markup: transcription.html
 //
