--- a/typography/typography.less
+++ b/typography/typography.less
@@ -1,6 +1,6 @@
 // Typography
 //
-// The `/fonts` folder in this repository contains recommended fonts with good Unicode support. The `fonts.less` file contains `font-family` declarations, with fallbacks, for serif and sans-serif fonts. The `LinuxLibertine.less` file contains @font-face declarations for the Linux Libertine font. You can swap out the font names for your font of choice. All recommend fonts are located in the `/fonts` folder in `.woff2` format (which is supported by all major modern browers).
+// The [`/typography`](https://github.com/digitallinguistics/styles/tree/main/typography) folder in this repository contains recommended fonts with good Unicode support. The `fonts.less` file contains `font-family` declarations, with fallbacks, for serif and sans-serif fonts. The `LinuxLibertine.less` file contains @font-face declarations for the Linux Libertine font. You can swap out the font names for your font of choice. All recommend fonts are located in the [`/typography`](https://github.com/digitallinguistics/styles/tree/main/typography) folder in `.woff2` format (which is supported by all major modern browers).
 //
 // Weight: 1
 //
