--- a/typography/typography.less
+++ b/typography/typography.less
@@ -1,6 +1,6 @@
 // Typography
 //
-// The [`/typography`](https://github.com/digitallinguistics/styles/tree/main/typography) folder in this repository contains recommended fonts with good Unicode support. The `fonts.less` file contains `font-family` declarations, with fallbacks, for serif and sans-serif fonts. The `LinuxLibertine.less` file contains @font-face declarations for the Linux Libertine font. You can swap out the font names for your font of choice. All recommend fonts are located in the [`/typography`](https://github.com/digitallinguistics/styles/tree/main/typography) folder in `.woff2` format (which is supported by all major modern browers).
+// The [`/typography`](https://github.com/digitallinguistics/styles/tree/main/typography) folder in this repository contains recommended fonts with good Unicode support. The `fonts.less` file contains `font-family` declarations, with fallbacks, for serif and sans-serif fonts. The `LinuxLibertine.less` file contains @font-face declarations for the Linux Libertine font. You can swap out the font names for your font of choice. All recommend fonts are located in the [`/typography`](https://github.com/digitallinguistics/styles/tree/main/typography) folder in `.woff2` format (which is supported by all major modern browers). Note that components do not import the `typography.less` or `fonts.less` file by default. You may need to import them yourself, or define your own `--font-unicode-sans` and `--font-unicode-serif` variables and assign them values.
 //
 // Weight: 1
 //
