FIX: translations should display inline

--- a/components/translation/translation.less
+++ b/components/translation/translation.less
@@ -8,7 +8,8 @@
 .tln,
 .translation {
 
-  quotes: '‘' '’' '“' '”';
+  display: inline;
+  quotes : '‘' '’' '“' '”';
 
   &::before {
     content: open-quote;
