--- a/typography/typography.less
+++ b/typography/typography.less
@@ -1,10 +1,42 @@
 // Typography
 //
-// The [`/typography`](https://github.com/digitallinguistics/styles/tree/main/typography) folder in this repository contains recommended fonts with good Unicode support. The `fonts.less` file contains `font-family` declarations, with fallbacks, for serif and sans-serif fonts. The `LinuxLibertine.less` file contains @font-face declarations for the Linux Libertine font. You can swap out the font names for your font of choice. All recommend fonts are located in the [`/typography`](https://github.com/digitallinguistics/styles/tree/main/typography) folder in `.woff2` format (which is supported by all major modern browers). Note that components do not import the `typography.less` or `fonts.less` file by default. You may need to import them yourself, or define your own `--font-unicode-sans` and `--font-unicode-serif` variables and assign them values.
+// The [`/typography`](https://github.com/digitallinguistics/styles/tree/main/typography) folder in this repository contains recommended fonts with good Unicode support. It contains two variables (in both LESS format and CSS variables format), --font-unicode-sans and --font-unicode-serif, which each contain a recommended list of unicode fonts with fallbacks. Note that components do not import the `typography.less` file, however certain components assume the presence of the --font-unicode-serif CSS variable. You may need to import the file yourself, or define your own `--font-unicode-sans` and `--font-unicode-serif` variables and assign them values.
 //
 // Weight: 1
 //
 // Styleguide typography
 
-@import 'LinuxLibertine.less';
-@import 'fonts.less';
+@font-unicode-sans:
+  'Noto Sans',
+  'Source Sans Pro',
+  'Andika',
+  'Lucida Sans Unicode',
+  sans-serif;
+
+@font-unicode-serif:
+  'Linux Libertine',
+  'Charis SIL',
+  'Gentium Plus',
+  'Doulos SIL',
+  'Source Serif Pro',
+  'Noto Serif',
+  'Times New Roman',
+  serif;
+
+:root {
+
+  // --font-unicode-sans
+  //
+  // A list of sans-serif Unicode fonts.
+  //
+  // Styleguide typography.variables.--font-unicode-sans
+  --font-unicode-sans: @font-unicode-sans;
+
+  // --font-unicode-serif
+  //
+  // A list of serif Unicode fonts.
+  //
+  // Styleguide typography.variables.--font-unicode-serif
+  --font-unicode-serif: @font-unicode-serif;
+
+}
