FIX: Do not wrap example source in parentheses (#223)
closes #223

--- a/components/components.less
+++ b/components/components.less
@@ -12,6 +12,8 @@
 @import 'document/document.less';
 @import 'emphasis/emphasis.less';
 @import 'example/example.less';
+@import 'example-header/example-header.less';
+@import 'example-source/example-source.less';
 @import 'examples/examples.less';
 @import 'gloss/gloss.less';
 @import 'inline-example/inline-example.less';
